# CascadedPointCloudFit

./: .gitignore  AI_READY_SUMMARY.md  BUILD_AND_TEST.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  CascadedPointCloudFit.sln  Dockerfile  FINAL_ANALYSIS_AND_VALIDATION.md  FINAL_REPOSITORY_REVIEW.md  HANDOFF_TO_KINETICCORE_AGENT.md  IcpFitter.py  KINETIC_CORE_APP_INTEGRATION.md  LICENSE  POINT_CLOUD_REGISTRATION_STATUS.md  PYTHON_CLEANUP_PLAN.md  PointCloudHelper.py  QUICKSTART.md  QUICK_STATUS_SUMMARY.md  README.md  REPOSITORY_CLEANUP_COMPLETE.md  REPOSITORY_STRUCTURE.md  TECHNICAL_DEBT_IMPROVEMENTS.md  TECHNICAL_DEBT_REVIEW.md  TEST_DATA_VALIDATION_REPORT.md  TypeConverter.py  VISUAL_ROADMAP.md  WORK_REVIEW_AND_ROADMAP.md  compute_metrics.py  create_report_name.py  icp_test.py  load_ply.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirementsLinux.txt  setup.py  source_temp.ply  target_temp.ply  (+3 more)
.claude/: settings.local.json
config/: default.yaml
docs/: HANDOFF_OPTIMIZATION.md  OPTIMIZATION_QUICK_REFERENCE.md
legacy/: CascadedFitter.py  CascadedPointCloudFit.py  CascadedPointCloudFit.pyproj  DockerBuild.bat  FgrFitter.py  FitResult.py  IcpFitter.py  PointCloudHelper.py  app.py  registration_algorithms.py  save_results_to_json.py  test_registration.py
scripts/: generate_test_data.py
test_data/: README.md  UNIT_111_Closed_J1.csv  UNIT_111_Open_J1.ply
tests/: conftest.py
typescript/: .gitignore  .npmignore  ANALYSIS_AND_ROADMAP.md  CLEANUP_COMPLETE.md  DATASET_VALIDATION_COMPLETE.md  DOCUMENTATION_REVIEW.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_IMPLEMENTED.md  PROGRESS.md  (+10 more)
(+174 files in other folders)
